# Smart-parking-app

./: .gitignore  README.md  main.py  pyproject.toml  run.py  test.py
app/: __init__.py  config.py  extensions.py  seed.py
app/forms/: LotForm.py  auth.py
app/models/: __init__.py  lot.py  reservation.py  spot.py  user.py
app/routes/: __init__.py  admin.py  auth.py  user.py
app/static/js/: chart.js  maps.js
app/templates/: base.html  index.html  login.html  register.html
app/templates/admin/: create_lot.html  dashboard.html  edit_lot.html  lot_analytics.html  spot_detail.html
app/templates/user/: dashboard.html
app/utils/: mapbox_util.py
instance/: parking_slot.db
migrations/versions/: 36cf19f7f577_initial_migration.py  fb1699959aa1_fix_pincode.py
